# uncp

./: .gitattributes  Cargo.toml  DESIGN.md  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml  test-ci.yml
benches/: path_interning.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: type_safe_relations.rs
gui/: Cargo.toml
gui/src/: main.rs
scripts/: run_benchmarks.sh
src/: cache.rs  content.rs  content_queue.rs  data.rs  detector.rs  engine.rs  error.rs  events.rs  lib.rs  log_ui.rs  memory.rs  paths.rs  persist.rs  pool.rs  query.rs  relations.rs  similarity.rs  ui.rs
src/systems/: discovery.rs  event_adapter.rs  hashing.rs  loader.rs  mod.rs  scheduler.rs
test_data/configs/: config.json  settings.yaml
test_data/documents/: data.csv  medium_copy.txt  medium_similar.txt  page.html  readme.md  readme_near.md
test_data/web/: app.js  index.html  style.css
tui/: Cargo.toml
tui/src/: df_render.rs  main.rs
