[package]
name = "uncp"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Un-copy (find and remove duplicate) files."

[workspace]
members = ["cli", "gui", "tui"]

[workspace.dependencies]
anyhow = "1.0.79"
ordered-float = "4.2.0"
smol = "2.0.2"
image = "0.24.0"
tracing = "0.1.40"
serde = { version = "1", features = ["derive"] }

[dependencies]
smol.workspace = true
image.workspace = true
ordered-float.workspace = true
serde.workspace = true
tracing.workspace = true

# Core data processing
polars = { version = "0.36.2", features = ["lazy", "temporal", "strings", "parquet", "ipc", "dtype-struct"] }

# Async and concurrency
async-trait = "0.1.77"
futures = "0.3.30"
rayon = "1.9.0"

# Hashing and similarity
blake3 = "1.5.0"
similar = "2.4.0"
img_hash = "3.2.0"

# File system and I/O
walkdir = "2.5.0"
sysinfo = "0.30.7"
tree_magic_mini = "3.1.4"
globset = "0.4"

# Archive support
tar = "0.4.40"
zip = "0.10.0-alpha.1"

# Caching and storage
lru = "0.12.1"
bincode = "1.3.3"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"

# Utilities
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
num_cpus = "1.16.0"
serde_json = "1"
dirs = "5"
async-channel = "2"
futures-lite = "2"

typed-generational-arena = "0.2.9"

[dev-dependencies]
tempfile = "3.8"
smol-potat = "1.1"