[package]
name = "uncp"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Un-copy (find and remove duplicate) files."

[workspace]
members = ["cli", "gui", "tui"]

[workspace.dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
crossterm = "0.29.0"
left-right = "0.11.5"
lockfree = "0.5.1"
ordered-float = "4.2.0"
smol = "2.0.2"
image = "0.24.0"
indexmap = "2.11.0"
tiny_bail = { version = "0.5.0", default-features = false, features = ["tracing", "error"] }
tracing = "0.1.40"
serde = { version = "1", features = ["derive"] }
rayon = "1.9.0"
ringbuf = "0.4.8"
smallvec = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
futures-lite = "2"
async-channel = "2"
polars = { version = "0.50.0", features = ["lazy", "temporal", "strings", "regex", "timezones", "parquet", "ipc", "dtype-struct"] }

[dependencies]
smol.workspace = true
image.workspace = true
ordered-float.workspace = true
serde.workspace = true
tracing.workspace = true

# Core data processing
polars.workspace = true

# Async and concurrency
async-trait = "0.1.77"
futures = "0.3.30"
rayon.workspace = true

# For benchmarks and testing
rand = { version = "0.9.2", optional = true }

# Hashing and similarity
blake3 = "1.5.0"
similar = "2.4.0"
img_hash = "3.2.0"

# File system and I/O
walkdir = "2.5.0"
sysinfo = "0.30.7"
tree_magic_mini = "3.1.4"
globset = "0.4"

# Archive support
tar = "0.4.40"
zip = "0.10.0-alpha.1"

# Caching and storage
lru = "0.12.1"
bincode = "1.3.3"

# Error handling
thiserror = "1.0.56"
anyhow.workspace = true

# Utilities
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono.workspace = true
indexmap.workspace = true
left-right.workspace = true
lockfree.workspace = true
num_cpus = "1.16.0"
ringbuf.workspace = true
serde_json = "1"
smallvec.workspace = true
tiny_bail.workspace = true
dirs.workspace = true
async-channel.workspace = true
futures-lite.workspace = true

typed-generational-arena = "0.2.9"
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.8"
smol-potat = "1.1"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.2"
test-log = { version = "0.2.18", features = ["trace"] }

[[bench]]
name = "path_interning"
harness = false
