[package]
name = "uncp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
uncp.path = ".."
clap = { version = "4.5.3", features = ["derive"] }

anyhow.workspace = true
smol.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
futures-lite = "2"
rayon = "1.9.0"
