[package]
name = "uncp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
uncp.path = ".."
clap = { version = "4.5.3", features = ["derive"] }

anyhow.workspace = true
smol.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
futures-lite.workspace = true
rayon.workspace = true
