[package]
name = "uncp-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
uncp.path = ".."
crossterm = "0.29.0"
ratatui = "0.30.0-alpha.2"
smol = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing = "0.1"
rayon = "1.9.0"
async-executor = "1"
async-channel = "2"
futures-lite = "2"
dirs = "5.0"
