[package]
name = "uncp-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
uncp.path = ".."
crossterm = "0.29.0"
ratatui = "0.30.0-alpha.2"
smol.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
tracing.workspace = true
rayon.workspace = true
async-executor = "1"
async-channel.workspace = true
futures-lite.workspace = true
dirs.workspace = true
polars.workspace = true
